--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,10 @@
 @media only screen and (max-width: 600px) {
     h1 {
-        font-size: 40;
+        font-size: 40px;
     }
     
     h2 {
-        font-size: 30;
+        font-size: 30px;
     }
 
     .title-container {
@@ -15,4 +15,9 @@
     #contact-options {
         margin: 0 3%;
     }
+
+    #about img {
+        display: none;
+    }
+
 }
