--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header ul {
     margin-block-start: 0;
     margin-block-end: 0;
     padding-inline-start: 1rem;
+    background: rgba(43, 52, 55, 0.91);
     border-bottom: #00FF78 solid 2px;
 }
 
